<resources>
    <string name="app_name">GroceryApp</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total_cost">Total Cost</string>
    <string name="amt">Amt</string>
    <string name="add_items_to_cart">Add Items to Cart</string>
    <string name="enter_item_name">Enter Item Name</string>
</resources>