<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/blue_shade_2"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:id="@+id/idLL1"
            tools:ignore="UselessParent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight ="2"
            android:text="@string/item_name"
            android:textColor="@color/white"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:id="@+id/idTVItemName"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/idTVQuantity"
            android:text="@string/quantity"
            android:textColor="@color/white"
            android:padding="4dp"
            android:layout_margin="3dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.5"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:id="@+id/idTVRate"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "0.5"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:id="@+id/idIVDelete"
            app:tint="@color/white"
            android:src="@drawable/ic_delete"
            />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:layout_toLeftOf="@+id/idTVTotalAmt"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTotalAmt"
            android:textColor="@color/white"
            android:layout_below="@+id/idLL1"
            android:layout_alignParentEnd="true"
            android:text="@string/amt"
            android:padding="4dp"
            android:layout_margin="3dp"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>